# shortcut

./: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml
src/: shortcut.cpp  shortcut.h  shortcut_exception.cpp  shortcut_exception.h  shortcut_global.h  shortcut_hotkeymap.h  shortcut_keysequence.cpp  shortcut_keysequence.h
